# rinn

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg.json
cmake/: FindSDL2.cmake
data/config/: assets.json  font.json  window.json  worldgen.json
rinn/: CMakeLists.txt  rinn.cpp  rinn.h
rinn/include/worldgen/: worldgen.h
rinn/src/worldgen/: worldgen.cpp
rinn/visualizer/: data_visualizer.cpp  data_visualizer.h
scroll/: CMakeLists.txt  scroll.h
scroll/include/: level.h  pos_2d.h  pos_3d.h  psc.h  random.h  renderer.h  space_2d.h  space_3d.h  system.h  terrain.h  world.h  worldgen.h
scroll/include/file/: bmp.h  serial.h
scroll/include/geometry/: dijkstra.h  poisson_generator.h  pos_2d.h  pos_3d.h  psc.h  space_2d.h  space_3d.h
scroll/src/file/: bmp.cpp
scroll/src/geometry/: dijkstra.cpp  pos_2d.cpp  pos_3d.cpp  psc.cpp  space_2d.cpp  space_3d.cpp
scroll/src/level/: level.cpp  terrain.cpp  world.cpp
scroll/src/renderer/: renderer.cpp
scroll/src/system/: system.cpp
tools/: data_visualizer.cpp  data_visualizer.h
